# choker

./: Cargo.toml  README.md
crates/chonker/: Cargo.toml
crates/chonker/benches/: benchmark.rs
crates/chonker/src/: archive.rs  cdc.rs  codec.rs  crypto.rs  database.rs  io.rs  lib.rs
crates/chonker/src/archive/: chunk.rs  header.rs  meta.rs
crates/chonker/src/codec/: decode.rs  encode.rs
crates/chonker/src/codec/encode/: context.rs  state.rs
crates/chonker/src/util/: sync.rs
crates/cli/: Cargo.toml
