[workspace]
resolver = "2"
members = [
    "crates/chonker",
    "crates/cli"
]

[workspace.package]
edition = "2021"
version = "0.0.0"
license = "Apache-2.0 WITH LLVM-exception"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
repository = "https://github.com/silvanshade/chonker"

[workspace.dependencies]
tokio = "1.35"

[profile.release]
codegen-units = 1
opt-level = 3
lto = "thin"
