[package]
name = "chonker-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "chonker"

[dependencies]
chonker = { path = "../chonker" }
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
rkyv = "0.7.43"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
